added all components seperately in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <app-root></app-root>
-  <app-component></app-component>
+  <app-header></app-header>
+<app-home-cover></app-home-cover>
+<app-about></app-about>
+<app-footer></app-footer>
 </body>
 </html>
