--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Shubhamzope</title>
-  <base href="/">
+  <base href="https://Shubhamzope96.github.io/Shubhamzope96/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
-  <app-header></app-header>
-<app-home-cover></app-home-cover>
-<app-about></app-about>
-<app-footer></app-footer>
 </body>
 </html>
